; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/kinesis/alvicstep/extr_matrix.c_read_row.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/kinesis/alvicstep/extr_matrix.c_read_row.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PINC = common dso_local global i32 0, align 4
@PINB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @read_row to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_row(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = call i32 @_delay_us(i32 30)
  %5 = load i32, i32* %3, align 4
  %6 = icmp eq i32 %5, 12
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i32, i32* @PINC, align 4
  %9 = or i32 %8, 63
  %10 = xor i32 %9, -1
  store i32 %10, i32* %2, align 4
  br label %14

11:                                               ; preds = %1
  %12 = load i32, i32* @PINB, align 4
  %13 = xor i32 %12, -1
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %11, %7
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @_delay_us(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
